Realigned banner elements

--- a/puppet/modules/login/templates/banner.erb
+++ b/puppet/modules/login/templates/banner.erb
@@ -1,33 +1,33 @@
 
-                                                                      ``````` ``````
-                                                                    ``.````````````````````
-                                                                   ...`````````````````````.`
-                                                                  .--..........````````.....--
- ooooooooooooo oooo                                               -/:---.........`..``.....-:/`                       
- 8'   888   `8 `888                                               -/:---........``````.....--:.                       
-      888       888 .oo.    .ooooo.                               -+:---___________________--:/.`..`` `     
-      888       888P"Y88b  d88' `88b                              -/:----.......``````.....--:y.....```.`   
-      888       888   888  888ooo888                              |/:-----.................--:o-----:+. .   
-      888       888   888  888    .o                              |/:-----.................--:|      /s``.     
-     o888o     o888o o888o `Y8bod8P'                              |/::------..............---:|      `m- -     
-                                                                  |/:::------............---::|       ss`.`
-      .o.                          .o8                            |..................... .o8 .|        s ..
-     .888.                        "888                            |.................... "888 .|        s ..`
-    .8"888.     ooo. .oo.  .oo.    888oooo.   .oooo.    .oooo.o  .oooo.o. .oooo.... .oooo888 . .ooooo.  oooo d8b
-   .8' `888.    `888P"Y88bP"Y88b   d88' `88b `P  )88b  d88(  "8 d88(  "8.`P  )88b..d88' `888 .d88' `88b `888""8P
-  .88ooo8888.    888   888   888   888   888  .oP"888  `"Y88b.  `"Y88b... .oP"888..888   888 .888   888  888
- .8'     `888.   888   888   888   888   888 d8(  888  o.  )88b o.  )88b d8(  888..888   888 .888   888  888
-o88o     o8888o o888o o888o o888o  `Y8bod8P' `Y888""8o 8""888P' 8""888P'.`Y888""8o.`Y8bod88P" `Y8bod8P' d888b
-                                                                  |+//////:::::::::-------../m/      .yo``.
-                                                                  y+////////:::::::---------/do` `.://:``.
-  What would you like to drink today?                             h+///////////::::::--::---+hhs::-```...  
-                                                                 `ho++//////////:::::::::::+yhyh```..`
-                                                                 -yhhyso++++++++///////oosyhhysm+.`
-                                                                 ods+////+oossssssssoo+sso+oyhds
-                                                                 mms+/++o+++++++////:::/+oshmNNh
-                                                                :dm/-..........`````````.../hmmm-
-                                                               `/ydmmhyoo++///::-----://ooshdhhy:`
-                                                                 .-/+oosyyhhyyyssooooossysso+:-`
-                                                                       `````-------``````
+                                                        ``````` ``````
+                                                      ``.````````````````````
+                                                     ...`````````````````````.`
+                                                    .--..........````````.....--
+        ooooooooooooooooo                          -/:---.........`..``.....-:/`
+        8'   888   `8`888                          -/:---........``````.....--:.
+             888      888 .oo.   .ooooo.          -+:---___________________--:/.`..`` `
+             888      888P"Y88b d88' `88b         -/:----.......``````.....--:y.....```.`
+             888      888   888 888ooo888         |/:-----.................--:o-----:+. .
+             888      888   888 888    .o         |/:-----.................--:|      /s``.
+            o888o    o888o o888o`Y8bod8P'         |/::------..............---:|      `m- -
+                                                  |/:::------............---::|       ..`.`
+      .o.                       .o8               |.....................---::.|  .o8. .. ..
+     .888.                     "888               |.................... ---::.| "888. .. ..`
+    .8"888.    ooo. .oo.  .oo.  888oooo.  .oooo.  |.oooo.o .oooo.o .oooo... .oooo888  .ooooo. oooo d8b
+   .8' `888.   `888P"Y88bP"Y88b d88' `88b`P  )88b d88(  "8d88(  "8`P  )88b.d88' `888 d88' `88b`888""8P
+  .88ooo8888.   888   888   888 888   888 .oP"888 `"Y88b. `"Y88b.. .oP"888.888   888 888   888 888
+ .8'     `888.  888   888   888 888   888d8(  888 o.  )88bo.  )88bd8(  888.888   888 888   888 888
+o88o     o8888oo888o o888o o888o`Y8bod8P'`Y888""8o8""888P'8""888P'`Y888""8o`Y8bod88P"`Y8bod8P'd888b
+                                                  |+//////:::::::::-------../m|      .yo``.
+                                                  y+////////:::::::---------/do` `.://:``.
+         What would you like to drink today?      h+///////////::::::--::---+hhs::-```...  
+                                                 `ho++//////////:::::::::::+yhyh```..`
+                                                 -yhhyso++++++++///////oosyhhysm+.`
+                                                 ods+////+oossssssssoo+sso+oyhds
+                                                 mms+/++o+++++++////:::/+oshmNNh
+                                                :dm/-..........`````````.../hmmm-
+                                               `/ydmmhyoo++///::-----://ooshdhhy:`
+                                                 .-/+oosyyhhyyyssooooossysso+:-`
+                                                       `````-------``````
 
 
