Shrank banner to 80 chars wide

--- a/puppet/modules/login/templates/banner.erb
+++ b/puppet/modules/login/templates/banner.erb
@@ -1,33 +1,28 @@
-
-                                                        ``````` ``````
-                                                      ``.````````````````````
-                                                     ...`````````````````````.`
-                                                    .--..........````````.....--
-        ooooooooooooooooo                          -/:---.........`..``.....-:/`
-        8'   888   `8`888                          -/:---........``````.....--:.
-             888      888 .oo.   .ooooo.          -+:---___________________--:/.`..`` `
-             888      888P"Y88b d88' `88b         -/:----.......``````.....--:y.....```.`
-             888      888   888 888ooo888         |/:-----.................--:o-----:+. .
-             888      888   888 888    .o         |/:-----.................--:|      /s``.
-            o888o    o888o o888o`Y8bod8P'         |/::------..............---:|      `m- -
-                                                  |/:::------............---::|       ..`.`
-      .o.                       .o8               |.....................---::.|  .o8. .. ..
-     .888.                     "888               |.................... ---::.| "888. .. ..`
-    .8"888.    ooo. .oo.  .oo.  888oooo.  .oooo.  |.oooo.o .oooo.o .oooo... .oooo888  .ooooo. oooo d8b
-   .8' `888.   `888P"Y88bP"Y88b d88' `88b`P  )88b d88(  "8d88(  "8`P  )88b.d88' `888 d88' `88b`888""8P
-  .88ooo8888.   888   888   888 888   888 .oP"888 `"Y88b. `"Y88b.. .oP"888.888   888 888   888 888
- .8'     `888.  888   888   888 888   888d8(  888 o.  )88bo.  )88bd8(  888.888   888 888   888 888
-o88o     o8888oo888o o888o o888o`Y8bod8P'`Y888""8o8""888P'8""888P'`Y888""8o`Y8bod88P"`Y8bod8P'd888b
-                                                  |+//////:::::::::-------../m|      .yo``.
-                                                  y+////////:::::::---------/do` `.://:``.
-         What would you like to drink today?      h+///////////::::::--::---+hhs::-```...  
-                                                 `ho++//////////:::::::::::+yhyh```..`
-                                                 -yhhyso++++++++///////oosyhhysm+.`
-                                                 ods+////+oossssssssoo+sso+oyhds
-                                                 mms+/++o+++++++////:::/+oshmNNh
-                                                :dm/-..........`````````.../hmmm-
-                                               `/ydmmhyoo++///::-----://ooshdhhy:`
-                                                 .-/+oosyyhhyyyssooooossysso+:-`
-                                                       `````-------``````
+    oooooooo.o8                         ``.```````````````               
+    8' 88 `8`88                        ...````````````````..`           
+       88    88 .o.   .ooo.           `:---.......`````...--|           
+       88    88P"Y8b d8' `8b          |/:--.......`````....-|           
+       88    88   88 88ooo88          |-----___________-----|/`--```    
+       88    88   88 88   .o          |/:---......````....--|o----.`.`  
+      o88o  o88o o88o`YbodP'          |/:----.............--|/    \+ .  
+                                      |/::----............--|      h..` 
+     .                 .o8            |/::------........---:|  .o. |o | 
+    .8.                "88            |///////////---------:|  "88.|h`| 
+   .8"8.  oo. .o.  .o.  88ooo.  .ooo.   oooo. .ooo. .ooo.   .ooo88  .ooo. ooo db
+  .8' `8. `88P"Y8bP"Y8b d8' `8b`P  )8b d8(  8 8(  8 P  )8b d8' `88 d8' `8b`88""P
+ .88ooo88. 88   88   88 88   88 .oP"88 `Y88b `"88b. .oP"88 88   88 88   88 88
+ 88     88 88   88   88 88   88d8(  88 o  )8bo. )8bd8(  88 88   88 88   88 88
+o88o   o88o88o o88o o88o`YbodP'`Y888"8o "888' "888'`Y888"8o`Ybod8P"`YbodP'd88b
+                                      |/////////////////---/hh/:-``..`  
+                                      |yo++///////:::::://ohdh/..``     
+ What would you like to drink today?  hsso+++oooo++++++syysssd|         
+                                     :Ny+/+++ooosoo+++/++osdNN.         
+                                    `smo:-.......`````````:ymmo`        
+                                    `/sdddyyssooo+++++osyhddys/`        
+                                       \`.-_____________--./       
+                                                                                  
+                                             
+            
+                                             
 
 
