--- a/puppet/modules/login/templates/banner.erb
+++ b/puppet/modules/login/templates/banner.erb
@@ -1,28 +1,24 @@
+.
+.
     oooooooo.o8                         ``.```````````````               
-    8' 88 `8`88                        ...````````````````..`           
-       88    88 .o.   .ooo.           `:---.......`````...--|           
-       88    88P"Y8b d8' `8b          |/:--.......`````....-|           
-       88    88   88 88ooo88          |-----___________-----|/`--```    
-       88    88   88 88   .o          |/:---......````....--|o----.`.`  
-      o88o  o88o o88o`YbodP'          |/:----.............--|/    \+ .  
-                                      |/::----............--|      h..` 
-     .                 .o8            |/::------........---:|  .o. |o | 
-    .8.                "88            |///////////---------:|  "88.|h`| 
+    8' 88 `8`88                        ...`````````````o``..`           
+       88    88 .o.   .ooo.           `  o   o    o         |           
+       88    88P"Y8b d8' `8b          |          o    o     |           
+       88    88   88 88ooo88          |-----___________-----|/`----\    
+       88    88   88 88   .o          |/////////////////////|o----...\  
+      o88o  o88o o88o`YbodP'          |/////////o///////////|/    \..\  
+     .                 .o8            |///////////////////o/|  .o. |..| 
+    .8.                "88            |/////////////////////|  "88.|..| 
    .8"8.  oo. .o.  .o.  88ooo.  .ooo.   oooo. .ooo. .ooo.   .ooo88  .ooo. ooo db
   .8' `8. `88P"Y8bP"Y8b d8' `8b`P  )8b d8(  8 8(  8 P  )8b d8' `88 d8' `8b`88""P
  .88ooo88. 88   88   88 88   88 .oP"88 `Y88b `"88b. .oP"88 88   88 88   88 88
  88     88 88   88   88 88   88d8(  88 o  )8bo. )8bd8(  88 88   88 88   88 88
 o88o   o88o88o o88o o88o`YbodP'`Y888"8o "888' "888'`Y888"8o`Ybod8P"`YbodP'd88b
-                                      |/////////////////---/hh/:-``..`  
-                                      |yo++///////:::::://ohdh/..``     
- What would you like to drink today?  hsso+++oooo++++++syysssd|         
-                                     :Ny+/+++ooosoo+++/++osdNN.         
-                                    `smo:-.......`````````:ymmo`        
-                                    `/sdddyyssooo+++++osyhddys/`        
-                                       \`.-_____________--./       
+                                      |/////o///////////////|h/....--`  
+                                      |////////////////////////---\     
+ What would you like to drink today?  |////////////o//////////|         
+                                     /////////////////////////|         
+                                    |//////////////////////////|        
+                                    |//////////////////////////|        
+                                      \----------------------/     
                                                                                   
-                                             
-            
-                                             
-
-
