--- a/docker/Dockerfile.erb
+++ b/docker/Dockerfile.erb
@@ -1,7 +1,7 @@
 FROM centos:7
 MAINTAINER Zachary Dovel <zacharyd@slalom.com>
 
-LABEL Description="This image is used to start the foobar executable" Vendor="ACME Products" Version="1.0"
+LABEL Description="Image used to start Kegbot" Vendor="Slalom Consulting" Version="1.0"
 
 
 RUN rpm -ivh http://yum.puppetlabs.com/puppetlabs-release-el-7.noarch.rpm
